syntax = "proto3";

option go_package = "./wordcountpb;wordcountpb";

service WordCountService {
  rpc MostFrequentWord (TextRequest) returns (MostFrequentWordResponse);
}

message TextRequest {
  string text = 1;
}

message MostFrequentWordResponse {
  string word = 1;
  int32 count = 2;
}
